bankapp/bankapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp-deployment
  labels:
    app: bankapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bankapp
  template:
    metadata:
      labels:
        app: bankapp
    spec:
      containers:
      - name: bankapp
        image: chinmayapradhan/bankapp:3
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: bankapp
