bankapp/java-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  namespace: bankapp
  labels:
    app: java-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: 156041433917.dkr.ecr.us-east-2.amazonaws.com/bank-app:1.0-2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: bankapp
spec:
  selector:
    app: java-app
  ports:
  - port: 80
    targetPort: 8080
